<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/posterDashboardFragment"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/nav_dashboard" />
    <item
        android:id="@+id/manageJobsFragment"
        android:icon="@drawable/ic_jobs"
        android:title="@string/nav_my_jobs" />
    <item
        android:id="@+id/applicantsListFragment"
        android:icon="@drawable/ic_applicants"
        android:title="@string/nav_applicants" />
    <item
        android:id="@+id/notificationsFragment"
        android:icon="@drawable/ic_notifications"
        android:title="@string/nav_notifications" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />
</menu>
