<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/splashFragment"
        android:name="com.jobos.android.ui.splash.SplashFragment"
        android:label="Splash">
        <action
            android:id="@+id/action_splash_to_login"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_splash_to_seeker_home"
            app:destination="@id/seekerHomeFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_splash_to_poster_dashboard"
            app:destination="@id/posterDashboardFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.jobos.android.ui.auth.LoginFragment"
        android:label="@string/login">
        <action
            android:id="@+id/action_login_to_register"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_login_to_forgot_password"
            app:destination="@id/forgotPasswordFragment" />
        <action
            android:id="@+id/action_login_to_role_selection"
            app:destination="@id/roleSelectionFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_login_to_seeker_home"
            app:destination="@id/seekerHomeFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_login_to_poster_dashboard"
            app:destination="@id/posterDashboardFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.jobos.android.ui.auth.RegisterFragment"
        android:label="@string/register">
        <action
            android:id="@+id/action_register_to_login"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_register_to_role_selection"
            app:destination="@id/roleSelectionFragment"
            app:popUpTo="@id/registerFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/forgotPasswordFragment"
        android:name="com.jobos.android.ui.auth.ForgotPasswordFragment"
        android:label="@string/forgot_password">
        <action
            android:id="@+id/action_forgot_to_reset"
            app:destination="@id/resetPasswordFragment" />
    </fragment>

    <fragment
        android:id="@+id/resetPasswordFragment"
        android:name="com.jobos.android.ui.auth.ResetPasswordFragment"
        android:label="@string/reset_password">
        <argument
            android:name="email"
            app:argType="string" />
        <action
            android:id="@+id/action_reset_to_login"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/roleSelectionFragment"
        android:name="com.jobos.android.ui.onboarding.RoleSelectionFragment"
        android:label="@string/select_role">
        <action
            android:id="@+id/action_role_to_seeker_setup"
            app:destination="@id/seekerSetupFragment" />
        <action
            android:id="@+id/action_role_to_poster_setup"
            app:destination="@id/posterSetupFragment" />
    </fragment>

    <fragment
        android:id="@+id/seekerSetupFragment"
        android:name="com.jobos.android.ui.onboarding.SeekerSetupFragment"
        android:label="Setup Profile">
        <action
            android:id="@+id/action_seeker_setup_to_home"
            app:destination="@id/seekerHomeFragment"
            app:popUpTo="@id/roleSelectionFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/posterSetupFragment"
        android:name="com.jobos.android.ui.onboarding.PosterSetupFragment"
        android:label="Setup Profile">
        <action
            android:id="@+id/action_poster_setup_to_dashboard"
            app:destination="@id/posterDashboardFragment"
            app:popUpTo="@id/roleSelectionFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/seekerHomeFragment"
        android:name="com.jobos.android.ui.seeker.home.SeekerHomeFragment"
        android:label="@string/nav_home">
        <action
            android:id="@+id/action_home_to_job_detail"
            app:destination="@id/jobDetailFragment" />
        <action
            android:id="@+id/action_home_to_job_search"
            app:destination="@id/jobSearchFragment" />
        <action
            android:id="@+id/action_home_to_notifications"
            app:destination="@id/notificationsFragment" />
    </fragment>

    <fragment
        android:id="@+id/jobSearchFragment"
        android:name="com.jobos.android.ui.seeker.jobs.JobSearchFragment"
        android:label="@string/search_jobs">
        <action
            android:id="@+id/action_search_to_job_detail"
            app:destination="@id/jobDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/jobDetailFragment"
        android:name="com.jobos.android.ui.seeker.jobs.JobDetailFragment"
        android:label="Job Details">
        <argument
            android:name="jobId"
            app:argType="long" />
        <action
            android:id="@+id/action_job_detail_to_apply"
            app:destination="@id/applyJobFragment" />
    </fragment>

    <fragment
        android:id="@+id/savedJobsFragment"
        android:name="com.jobos.android.ui.seeker.jobs.SavedJobsFragment"
        android:label="@string/save_job">
        <action
            android:id="@+id/action_saved_to_job_detail"
            app:destination="@id/jobDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/applyJobFragment"
        android:name="com.jobos.android.ui.seeker.applications.ApplyJobFragment"
        android:label="@string/apply_now">
        <argument
            android:name="jobId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/applicationsFragment"
        android:name="com.jobos.android.ui.seeker.applications.ApplicationsFragment"
        android:label="@string/my_applications">
        <action
            android:id="@+id/action_applications_to_detail"
            app:destination="@id/applicationDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/applicationDetailFragment"
        android:name="com.jobos.android.ui.seeker.applications.ApplicationDetailFragment"
        android:label="Application Details">
        <argument
            android:name="applicationId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/cvListFragment"
        android:name="com.jobos.android.ui.seeker.cv.CvListFragment"
        android:label="@string/my_cvs">
        <action
            android:id="@+id/action_cv_list_to_editor"
            app:destination="@id/cvEditorFragment" />
        <action
            android:id="@+id/action_cv_list_to_preview"
            app:destination="@id/cvPreviewFragment" />
        <action
            android:id="@+id/action_cv_list_to_templates"
            app:destination="@id/templatesFragment" />
    </fragment>

    <fragment
        android:id="@+id/cvEditorFragment"
        android:name="com.jobos.android.ui.seeker.cv.CvEditorFragment"
        android:label="@string/edit_cv">
        <argument
            android:name="cvId"
            app:argType="long"
            android:defaultValue="-1L" />
        <argument
            android:name="templateId"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
        <action
            android:id="@+id/action_editor_to_preview"
            app:destination="@id/cvPreviewFragment" />
    </fragment>

    <fragment
        android:id="@+id/cvPreviewFragment"
        android:name="com.jobos.android.ui.seeker.cv.CvPreviewFragment"
        android:label="@string/preview_cv">
        <argument
            android:name="cvId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/templatesFragment"
        android:name="com.jobos.android.ui.seeker.cv.TemplatesFragment"
        android:label="@string/cv_templates">
        <action
            android:id="@+id/action_templates_to_editor"
            app:destination="@id/cvEditorFragment" />
    </fragment>

    <fragment
        android:id="@+id/creditsFragment"
        android:name="com.jobos.android.ui.credits.CreditsFragment"
        android:label="@string/credits">
        <action
            android:id="@+id/action_credits_to_transactions"
            app:destination="@id/transactionsFragment" />
        <action
            android:id="@+id/action_credits_to_plans"
            app:destination="@id/plansFragment" />
    </fragment>

    <fragment
        android:id="@+id/transactionsFragment"
        android:name="com.jobos.android.ui.credits.TransactionsFragment"
        android:label="@string/transaction_history" />

    <fragment
        android:id="@+id/plansFragment"
        android:name="com.jobos.android.ui.credits.PlansFragment"
        android:label="@string/subscription_plans" />

    <fragment
        android:id="@+id/notificationsFragment"
        android:name="com.jobos.android.ui.notifications.NotificationsFragment"
        android:label="@string/notifications">
        <action
            android:id="@+id/action_notifications_to_preferences"
            app:destination="@id/notificationPreferencesFragment" />
    </fragment>

    <fragment
        android:id="@+id/notificationPreferencesFragment"
        android:name="com.jobos.android.ui.notifications.NotificationPreferencesFragment"
        android:label="@string/notification_preferences" />

    <fragment
        android:id="@+id/posterDashboardFragment"
        android:name="com.jobos.android.ui.poster.dashboard.PosterDashboardFragment"
        android:label="@string/nav_dashboard">
        <action
            android:id="@+id/action_dashboard_to_create_job"
            app:destination="@id/createJobFragment" />
        <action
            android:id="@+id/action_dashboard_to_manage_jobs"
            app:destination="@id/manageJobsFragment" />
        <action
            android:id="@+id/action_dashboard_to_applicants"
            app:destination="@id/applicantsListFragment" />
        <action
            android:id="@+id/action_dashboard_to_notifications"
            app:destination="@id/notificationsFragment" />
    </fragment>

    <fragment
        android:id="@+id/createJobFragment"
        android:name="com.jobos.android.ui.poster.jobs.CreateJobFragment"
        android:label="@string/create_job" />

    <fragment
        android:id="@+id/manageJobsFragment"
        android:name="com.jobos.android.ui.poster.jobs.ManageJobsFragment"
        android:label="@string/manage_jobs">
        <action
            android:id="@+id/action_manage_to_edit_job"
            app:destination="@id/editJobFragment" />
        <action
            android:id="@+id/action_manage_to_applicants"
            app:destination="@id/applicantsListFragment" />
    </fragment>

    <fragment
        android:id="@+id/editJobFragment"
        android:name="com.jobos.android.ui.poster.jobs.EditJobFragment"
        android:label="@string/edit_job">
        <argument
            android:name="jobId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/applicantsListFragment"
        android:name="com.jobos.android.ui.poster.applicants.ApplicantsListFragment"
        android:label="@string/view_applicants">
        <argument
            android:name="jobId"
            app:argType="long"
            android:defaultValue="-1L" />
        <action
            android:id="@+id/action_applicants_to_detail"
            app:destination="@id/applicantDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/applicantDetailFragment"
        android:name="com.jobos.android.ui.poster.applicants.ApplicantDetailFragment"
        android:label="Applicant Details">
        <argument
            android:name="applicationId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.jobos.android.ui.profile.ProfileFragment"
        android:label="@string/profile">
        <action
            android:id="@+id/action_profile_to_edit"
            app:destination="@id/editProfileFragment" />
        <action
            android:id="@+id/action_profile_to_settings"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_profile_to_credits"
            app:destination="@id/creditsFragment" />
        <action
            android:id="@+id/action_profile_to_login"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.jobos.android.ui.profile.EditProfileFragment"
        android:label="@string/edit_profile" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.jobos.android.ui.profile.SettingsFragment"
        android:label="@string/settings">
        <action
            android:id="@+id/action_settings_to_change_password"
            app:destination="@id/changePasswordFragment" />
        <action
            android:id="@+id/action_settings_to_notification_prefs"
            app:destination="@id/notificationPreferencesFragment" />
    </fragment>

    <fragment
        android:id="@+id/changePasswordFragment"
        android:name="com.jobos.android.ui.profile.ChangePasswordFragment"
        android:label="@string/change_password" />

</navigation>
